--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,11 @@
     {
       "mode": "auto"
     }
-  ]
+  ],
+  "workbench.statusBar.visible": false,
+  "workbench.editor.showTabs": "single",
+  "workbench.editor.enablePreview": false,
+  "workbench.activityBar.location": "hidden",
+  "postman.settings.dotenv-detection-notification-visibility": false,
+  "prisma.file": "packages/db/prisma/schema.prisma"
 }
