feat: implement initial API structure and template message endpoint
This commit establishes the foundational architecture for the v2 API.

Key features and implementations include:
- Setup of a Fastify server with Zod for validation and a Type Provider for type safety.
- Integration of Swagger UI for automatic and interactive API documentation.
- Creation of a modular authentication middleware to protect specific routes, handling token validation against the database and implementing a cache layer.
- Refactoring of the Meta API communication layer following SOLID principles, separating the HTTP client, payload builder, and service orchestrator.
- Implementation of the main business logic endpoint for sending WhatsApp template messages (`POST /message/template`).
- Robust error handling, including custom error classes to gracefully manage and relay specific error messages from the Meta API back to the client.
- Configuration of monorepo packages (@repo/db, @repo/env) to be compilable and properly export their modules and types.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,5 @@
   "workbench.statusBar.visible": false,
   "workbench.editor.showTabs": "single",
   "workbench.editor.enablePreview": false,
-  "workbench.activityBar.location": "hidden",
-  "postman.settings.dotenv-detection-notification-visibility": false,
-  "prisma.file": "packages/db/prisma/schema.prisma"
+  "workbench.activityBar.location": "hidden"
 }
